--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # compiled output
-/dist
 /tmp
 /out-tsc
 # Only exists if Bazel was run
@@ -47,3 +46,6 @@ Thumbs.db
 
 # duplicated readme file
 /projects/angular-adapter/readme.md
+
+.npmrc
+dist
