--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "angular-adapter",
+  "name": "@fulcrumpro/angular-adapter",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -16,7 +16,6 @@
     "e2e": "ng e2e",
     "prepare": "husky install"
   },
-  "private": true,
   "dependencies": {
     "@angular/animations": "~10.1.2",
     "@angular/common": "~10.1.2",
@@ -26,7 +25,7 @@
     "@angular/platform-browser": "~10.1.2",
     "@angular/platform-browser-dynamic": "~10.1.2",
     "@angular/router": "~10.1.2",
-    "@flatfile/adapter": "^2.8.5",
+    "@fulcrumpro/adapter": "^2.8.5",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
