--- a/projects/angular-adapter/package.json
+++ b/projects/angular-adapter/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@flatfile/angular",
+  "name": "@fulcrumpro/angular",
   "version": "1.2.9",
   "homepage": "https://flatfile.io/",
   "description": "Angular flatfile adapter",
@@ -27,7 +27,7 @@
     "@angular/core": "^8.0.0 || ^9.0.0 || ^10.0.0 || ^11.0.0 || ^12.0.0"
   },
   "dependencies": {
-    "@flatfile/adapter": "^2.8.6",
+    "@fulcrumpro/adapter": "^2.8.6",
     "tslib": "^2.0.0"
   }
 }
